SebaDere | fix hover on mobile

--- a/src/components/InfoSection/flipCard.css
+++ b/src/components/InfoSection/flipCard.css
@@ -10,6 +10,11 @@
     margin-right: 20px; 
     transition: transform 0.1s ease-in-out;
   }
+
+
+  .card-container:hover  {
+    transform: scale(1.04);
+} 
   
   @media (max-width: 1350px) {
     .card-container {
@@ -34,7 +39,14 @@
             height: 230px;
             margin-right: 0; 
             }
+        .card-container:hover  {
+            transform: scale(1);
+        } 
+            
         }
+
+
+
     
 
 .card {
@@ -48,9 +60,7 @@
  
 }
 
-.card-container:hover  {
-    transform: scale(1.04);
-} 
+
 
 .card figure {
     position: absolute;
